--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,4 +1,7 @@
 <div class="col-md-6">
+	<div *ngIf="!categories">
+		Loading...
+	</div>
 	<div class="list-group" *ngFor="let category of categories" (click)="onSelect(category.attributes)">
 		<a class="list-group-item">
 			<h4 class="list-group-item-heading">id: {{category.attributes.id}} - <strong>{{category.attributes.name}}</strong></h4>
