--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <h1>{{title}}</h1>
 <nav>
 	<a routerLink="/" routerLinkActive="active">Inicio</a><strong>&nbsp;/&nbsp;</strong>
-	<a routerLink="/list" routerLinkActive="active">Lista</a>
+	<a routerLink="/list" routerLinkActive="active">Lista</a><strong>&nbsp;/&nbsp;</strong>
+	<a routerLink="/new" routerLinkActive="active">Create</a>
 </nav>
 <router-outlet></router-outlet>
