feat: Initial "code font" :video_camera:

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 <nav>
 	<a routerLink="/" routerLinkActive="active">Inicio</a><strong>&nbsp;/&nbsp;</strong>
 	<a routerLink="/list" routerLinkActive="active">Lista</a><strong>&nbsp;/&nbsp;</strong>
-	<a routerLink="/new" routerLinkActive="active">Create</a>
+	<a routerLink="/new" routerLinkActive="active">Create</a><strong>&nbsp;/&nbsp;</strong>
+	<a routerLink="/cf" routerLinkActive="active">Codifo fuente (Test)</a>
 </nav>
 <router-outlet></router-outlet>
