--- a/src/app/code-font/code-font.component.html
+++ b/src/app/code-font/code-font.component.html
@@ -1,3 +1,4 @@
-<p>
-  code-font works!
-</p>
+<h1>{{ title }}</h1>
+<ul *ngFor = "let costumer of costumers; let i = index">
+	<li>{{ i }} - {{ costumer }}</li>
+</ul>
